--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,12 +6,13 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <head>
-        <title>Pastelria D'liuz</title>meta data-react-helmet="true" id="meta-http-ua-compatible" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>  
+  <title>Pastelria D'liuz</title>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width">
+          <meta data-react-helmet="true" id="meta-http-ua-compatible" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> 
           <meta data-react-helmet="true" id="meta-viewport" name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes"/>
           <meta data-react-helmet="true" id="meta-theme-color" name="theme-color" content="#000"/>
           <meta data-react-helmet="true" id="meta-fb-app-id" property="fb:app_id" content="136853949816466"/>
-          <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width">
              <link rel="stylesheet" href="css/metro-bootstrap.css">
              <link rel="stylesheet" href="css/Estilos.css">
 <script>
