--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,13 +8,13 @@ and open the template in the editor.
 <head>
   <title>Pastelria D'liuz</title>
           <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width">
-          	<meta data-react-helmet="true" id="meta-http-ua-compatible" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> 
-        <meta data-react-helmet="true" id="meta-viewport" name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes"/>
-        <meta data-react-helmet="true" id="meta-theme-color" name="theme-color" content="#000"/>
-        <meta data-react-helmet="true" id="meta-fb-app-id" property="fb:app_id" content="136853949816466"/>
-             <link rel="stylesheet" href="css/metro-bootstrap.css">
-             <link rel="stylesheet" href="css/Estilos.css">
+          <meta name="viewport" content="user-scalable=no,initial-scale=1,
+          maximum-scale=1,minimum-scale=1,width=device-width,height=device-height">
+          <link rel="stylesheet" href="js/jquery.mobile-1.3.2.min.css"/>               
+          <script src="js/jquery-1.9.1.min.js"> </script>
+          <script src="js/jquery.mobile-1.3.2.min.js"></script>
+          <link rel="stylesheet" href="css/metro-bootstrap.css">
+          <link rel="stylesheet" href="css/Estilos.css">
 <script>
     /**
      * Array con las imagenes y enlaces que se iran mostrando en la web
